k8s_old/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: kiii-project
spec:
  serviceName: "db"
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
#        env:
#          - name: POSTGRES_DB
#            valueFrom:
#              secretKeyRef:
#                name: app-secrets
#                key: POSTGRES_DB
#          - name: POSTGRES_USER
#            valueFrom:
#              secretKeyRef:
#                name: app-secrets
#                key: POSTGRES_USER
#          - name: POSTGRES_PASSWORD
#            valueFrom:
#              secretKeyRef:
#                  name: app-secrets
#                  key: POSTGRES_PASSWORD

  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: kiii-project
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432
